# commitgen

./: .gitignore  COMMITGEN_PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: publish.yml
commitgen/: __init__.py  __main__.py  cli.py
commitgen/core/: config_manager.py  diff_processor.py  git_handler.py  message_generator.py
commitgen/prompts/: system_prompts.py
commitgen/providers/: base.py  claude_provider.py  ollama_provider.py  openrouter_provider.py
tests/: test_diff_processor.py
